// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HousingStatusField /> matches snapshot 1`] = `
<select
  class="sc-idOhPF gSNtny"
  id="housingStatusField"
  name="name"
  type="text"
>
  <option
    class="sc-hHftDr bhxQtR"
    disabled=""
    value="select"
  >
    wybierz 
  </option>
  <option
    value="property"
  >
    mieszkanie własne
  </option>
  <option
    value="with_parent"
  >
    mieszkanie rodziców
  </option>
  <option
    value="rental"
  >
    mieszkanie wynajmowane
  </option>
  <option
    value="room"
  >
    pokój
  </option>
</select>
`;

exports[`<HousingStatusField /> matches snapshot with error 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="name"
      >
        Test*
      </label>
      <div
        class="sc-bkzZxe jbuFap"
      >
        <select
          class="sc-idOhPF emkUjz"
          id="housingStatusField"
          label="Test"
          name="name"
          required=""
          type="text"
        >
          <option
            class="sc-hHftDr bhxQtR"
            disabled=""
            value="select"
          >
            wybierz *
          </option>
          <option
            value="property"
          >
            mieszkanie własne
          </option>
          <option
            value="with_parent"
          >
            mieszkanie rodziców
          </option>
          <option
            value="rental"
          >
            mieszkanie wynajmowane
          </option>
          <option
            value="room"
          >
            pokój
          </option>
        </select>
        <span
          class="sc-dIUggk hceYpr"
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        To pole jest wymagane
      </span>
    </div>
  </form>
</div>
`;

exports[`<HousingStatusField /> matches snapshot with label 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <label
        for="name"
      >
        Test
      </label>
      <div
        class="sc-bkzZxe jbuFap"
      >
        <select
          class="sc-idOhPF gSNtny"
          id="housingStatusField"
          label="Test"
          name="name"
          type="text"
        >
          <option
            class="sc-hHftDr bhxQtR"
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="property"
          >
            mieszkanie własne
          </option>
          <option
            value="with_parent"
          >
            mieszkanie rodziców
          </option>
          <option
            value="rental"
          >
            mieszkanie wynajmowane
          </option>
          <option
            value="room"
          >
            pokój
          </option>
        </select>
        <span
          class="sc-dIUggk hceYpr"
        />
      </div>
    </div>
  </form>
</div>
`;

exports[`<HousingStatusField /> select field with custom validation 1`] = `
<div>
  <form
    action="#"
    class="sc-iBPRYJ janqdG"
    id="testForm"
  >
    <div
      class="sc-kEjbxe lcGTJL"
    >
      <div
        class="sc-bkzZxe jbuFap"
      >
        <select
          class="sc-idOhPF emkUjz"
          id="housingStatusField"
          name="name"
          type="text"
        >
          <option
            class="sc-hHftDr bhxQtR"
            disabled=""
            value="select"
          >
            wybierz 
          </option>
          <option
            value="property"
          >
            mieszkanie własne
          </option>
          <option
            value="with_parent"
          >
            mieszkanie rodziców
          </option>
          <option
            value="rental"
          >
            mieszkanie wynajmowane
          </option>
          <option
            value="room"
          >
            pokój
          </option>
        </select>
        <span
          class="sc-dIUggk hceYpr"
        />
      </div>
      <span
        class="sc-kstrdz hYtgrW"
      >
        Podane dane są nieprawidłowe
      </span>
    </div>
  </form>
</div>
`;
